@@ -81,6 +81,9 @@ C-API
 Library
 -------
 
+- Issue #3704: cookielib was not properly handling URLs with a / in the
+  parameters.
+
 - Issue #4629: getopt raises an error if an argument ends with = whereas getopt
   doesn't except a value (eg. --help= is rejected if getopt uses ['help='] long
   options).
